//---------------------------------------------------------------------
//---------------------------------------------------------------------
syntax = "proto3";

//---------------------------------------------------------------------
//---------------------------------------------------------------------
package ni.measurementlink.measurement.tests.v1;

//---------------------------------------------------------------------
//---------------------------------------------------------------------
option csharp_namespace = "NationalInstruments.MeasurementServices.Measurements";

//---------------------------------------------------------------------
//---------------------------------------------------------------------

message UIProgressUpdatesParameter {
    double time_in_seconds = 1;
}

message UIProgressUpdatesOutput {
    double elapsed_time_in_seconds = 1;
    repeated double random_numbers = 2;
    string status = 3;
}
